tests/error/error10.correct
attempt to modify field 'x' in value of type 'number'
